tools/architecture/validate-source-imports/tests/fixtures/invalid/type-only-boundary-violation/src/index.ts
import type { FC } from "react";
export const packageName = "@platform/domain-core";
